# hlarchical

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
src/hlarchical/: array.py  cli.py  dataset.py  models.py  preprocess.py  process.py  seq.py  stats.py  summary.py  trainer.py  utils.py
src/hlarchical/config/: config.yaml
src/hlarchical/data/: HLA_gene_position_GRCh37.txt  ancestry.txt  cram_subset_hla_assembly38.bed  features_list.txt  features_with_ancestry_list.txt  masks.txt
src/hlarchical/data/with_ancestry/: ancestry.txt  maps.txt  masks.txt
