[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hlarchical"
version = "0.0.1"
description = "HLA imputation using deep learning"
readme = "README.md"
requires-python = ">=3.13"

authors = [
  {name = "Han Sun", email = "hansun@stanford.edu"}
]

[project.urls]
"Homepage" = "https://github.com/HaniceSun/hlarchical"

[project.scripts]
hla = "hlarchical.cli:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages]
find = { where = ["src"] }

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
smart = ["data/*.txt*", "config/*.yaml"]
